hphp/test/zend/good/ext/gd/tests/bug66356.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if(!extension_loaded('gd')){ die('skip gd extension not available'); }
}
