hphp/test/zend/bad/ext/intl/tests/timezone_getUnknown_error.php.skipif
<?php
if (!extension_loaded('intl'))
	die('skip intl extension not enabled');
if (version_compare(INTL_ICU_VERSION, '49') < 0)
	die('skip for ICU 49+');